DKF-434 - [BUGFIX] Marginer og overflow på tekst på testregelknapper - Viser hel tittel ved hover over testregelknappene Annet: - Bump dependencies - [BUGFIX] Sette paginering til side 1 ved søk slik at resultater vises riktig

--- a/frontend/src/inngaaende-test/test-overview/loeysing-test/button/testregel-button.scss
+++ b/frontend/src/inngaaende-test/test-overview/loeysing-test/button/testregel-button.scss
@@ -134,11 +134,16 @@
   }
 
   &-name {
-    padding-top: 2rem;
+    padding: 1.5rem 1.5rem 0 0;
     min-width: 8rem;
     position: absolute;
     top: 0;
     left: 8rem;
     text-align: left;
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    line-clamp: 3;
+    -webkit-box-orient: vertical;
   }
 }
